[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "content-moderation-openenv"
version = "1.0.0"
description = "A real-world content moderation environment for training and evaluating AI agents on trust & safety decisions."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.scripts]
server = "server.app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/Malateshd/content_moderation_openenv"
Repository = "https://github.com/Malatesh-D/Content-Moderation"

[tool.openenv]
name = "content-moderation-openenv"
version = "1.0.0"
entry_point = "inference.py"
space_url = "https://malateshd-content-moderation-openenv.hf.space"
tasks = ["binary_classify", "multi_label_classify", "policy_enforcement"]
